2002-12-13  Sam Steingold  <sds@gnu.org>

	CLUE and CLIO now compile with MIT-CLX
	* modules/clx/mit-clx/dependent.lisp (radians->int16)
	(int16->radians): avoid floating contagion warnings
	* modules/clx/mit-clx/depdefs.lisp
	(*def-clx-class-use-defclass*): set to '(window drawable pixmap)
	* modules/clx/mit-clx/clx.lisp: (provide :clx)

2002-12-13  Sam Steingold  <sds@gnu.org>

	* stream.d (kbd_last_buf): new function
	(rd_ch_keyboard): use it to flush UnbufferedStream_bytebuf before
	checking strm_keyboard_buffer: this fixes a bug in
	LISTEN/READ-CHAR interaction: listen would consume the char and
	READ-CHAR will never see it, while LISTEN will now always return T
	Reported by Jamison Masse <jamison@redwood.snu.ac.kr>

2002-12-12  Sam Steingold  <sds@gnu.org>

	* stream.d (key_event): renamed to key_event_t
	(add_keybinding): renamed to keybinding();
	second argument is a struct, not a pointer now
	(keybinding): removed the macro
	(make_keyboard_stream): use new macros BIND_KEY() and CHECK_CAP()

2002-12-12  Sam Steingold  <sds@gnu.org>

	reversed the 2001-11-27 patch: elt_nreverse() reverses
	_bits_ in the bitvector, while we need to swap _bytes_
	* stream.d (byte_swap): new function
	(READ-INTEGER, READ-FLOAT, WRITE-INTEGER, WRITE-FLOAT):
	use it instead of elt_nreverse()
	Reported by Bernard Urban <Bernard.Urban@meteo.fr>

2002-12-12  Sam Steingold  <sds@gnu.org>

	* init.lisp (expand-form): export the code walker

2002-12-12  Sam Steingold  <sds@gnu.org>

	* unixconf.h.in (ENABLE_NLS): added (this fixes
	the 2002-07-19 lispbibl.d patch)

2002-12-12  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* pathname.d (TrueName) [WIN32_NATIVE]: fixed a bug -
	assure_dir_exists returned false on D:\ (D - any drive).

2002-12-12  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	Fix MSVC compilation
	* stream.d (sock_opt_bool, sock_opt_int, sock_opt_time)
	(socket_options): use SOCKLEN_T instead of socklen_t.
	* spvw_mmap.d (mmap_zeromap) [HAVE_WIN32_VM]: fix declaration.
